--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,7 +3,12 @@ Desta maneira, apesar de deterem diferentes desempenhos dependendo da ordenaçã
 
 Adicionalmente, o algoritmo de contagem, ainda que o vetor passado tenha poucos elementos, pode ter um tempo de execução muito alto em razão da variação entre os números. Assim, é aconselhável a utilização do algoritmo em pauta apenas com listas com uma exígua variação.
 
-Em outra perspectiva, o bolha foi o algoritmo que apresentou o menor rendimento quando submetido a sequências com diferentes tamanhos; o contagem, por outro lado, garantiu, apesar da faixa de valores maior, o melhor desempenho, principalmente nas listas com mais elementos. Dessa forma, a utilização do bolha é recomendada apenas para fins didáticos.
+Em outra perspectiva, o bolha foi o algoritmo que apresentou o menor rendimento quando submetido a sequências com diferentes tamanhos; o contagem, por outro lado, garantiu, apesar da faixa de valores maior, o melhor desempenho, principalmente nas listas com mais elementos. Assim, a utilização do bolha é recomendada apenas para fins didáticos.
 
 
 Por fim, diante das comparações realizadas entre o Python e C, observa-se que, para algoritmos que dependem de malhas de repetição, a segunda linguagem apresenta um desempenho mais satisfatório.
+
+\section{Considerações finais}
+A realização deste relatório possibilitou o aprendizado em diversas áreas do conhecimento, especialmente na análise de algoritmos, ao separá-los por casos e verificá-los individualmente.
+Além disso, o projeto proporcionou uma ampla experiência na criação de textos acadêmicos e na investigação da eficiência e do comportamento de um algoritmo.
+Portanto, o exercício programa permitiu um aprimoramento em competências que serão de extrema importância para futuros projetos.
